8345344: Hide java.lang.classfile.components package to implementation