@@ -31,12 +31,13 @@ import java.util.ArrayList;
 import java.util.List;
 import java.lang.classfile.ClassModel;
 import java.lang.classfile.ClassFile;
-import java.lang.classfile.components.ClassPrinter;
+import jdk.internal.classfile.components.ClassPrinter;
 import org.openjdk.jmh.annotations.*;
 
 @BenchmarkMode(Mode.Throughput)
 @State(Scope.Benchmark)
 @Fork(value = 1, jvmArgs = {
+        "--add-exports", "java.base/jdk.internal.classfile.components=ALL-UNNAMED",
         "--enable-preview"})
 @Warmup(iterations = 3)
 @Measurement(iterations = 4)
